Fixed mobile footer and review section spacing

--- a/css/site.css
+++ b/css/site.css
@@ -520,7 +520,8 @@ header.nav.hide-header {
         padding: 0px 30px 20px;
         text-align: center;
         color: #9A2C00;
-        margin-top: 60px;
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
 }
 
@@ -642,6 +643,12 @@ header.nav.hide-header {
 }
 
 @media (max-width: 900px) {
+    .footer-logo-mobile {
+        height: 80px;
+        align-items: center;
+        margin-top: -20px;
+        margin-bottom: 30px;
+    }
     .footer-inner {
         display: none;
         /* hide desktop layout on mobile */
